# Distributed-Systems

./: ELEC_477_Testing_Documentation.docx  Makefile  README.md  clientStub.cpp  clientStub.hpp  data.pb.cc  e1client.cpp  e1client.hpp  e1client3.cpp  e1client4.cpp  e1clientTest1.cpp  e1clientTest2.cpp  e1server.cpp  e1server.hpp  e1service.cpp  e1service.hpp  main copy.cpp  main.cpp  mainTest3.cpp  mainTest4.cpp  test1.txt  test3.txt  test4.txt  ~$EC_477_Code_Documentation.docx  ~$EC_477_Testing_Documentation.docx  ~WRL4011.tmp
Assignment1/: ELEC_477_Code_Documentation.docx  ELEC_477_Testing_Documentation.docx  data.pb.h  data.proto  dean.db  e1client.hpp  e1client3.hpp  e1client4.cpp  e1service.cpp  e1service.hpp  main.cpp  mainTest3.cpp  marksa1.txt  test2.txt  test3.txt
Assignment2/: Makefile  kvclient1.cpp  kvclient1.hpp  kvclientstub.cpp  kvclientstub.hpp  kvserver.cpp  kvserver.hpp  kvservice.cpp  kvservice.hpp  main.cpp  network.cpp
Assignment2/Network_Sim_V2/: DIRSVC.pb.cc  DIRSVC.pb.h  DIRSVC.proto  DIRSVCrpc.h  DirSvcClientStub.cpp  DirSvcClientStub.hpp  DirSvcServer.cpp  DirSvcServer.hpp  DirSvcService.cpp  DirSvcService.hpp  E477KV.pb.h  E477KV.proto  ELEC_477_DOCUMENTATION.docx  ELEC_477_TESTING_DOC.docx  Makefile  Test1.txt  kvclient1.cpp  kvclient1.hpp  kvclientstub.cpp  kvclientstub.hpp  kvserver.cpp  kvserver.hpp  kvservice.cpp  kvservice.hpp  main.cpp  marksa2.txt  network.cpp  ~$EC_477_DOCUMENTATION.docx  ~$EC_477_TESTING_DOC.docx
Assignment3/: ELEC_477_Documentation_A3.docx  ELEC_477_Testing_A3.docx
Assignment3/A2SolutionNetworkV2NewSemantics/: E477KV.pb.cc  Makefile  kvclient1.cpp  kvclientstub.cpp  kvserver.cpp  kvserver.hpp  kvservice.cpp  kvservice.hpp  main.cpp  serverData.h
Assignment3/A2SolutionNetworkV2NewSemantics/servicedir/: SvcDir.pb.cc  SvcDir.pb.h  srvcdirclientstub.cpp  srvcdirservice.cpp  tstSvcDirMain.cpp
Assignment4/: CMakeLists.txt  TorontoAll.csv  aircraft.cpp  apartDepart.cpp  center.cpp  controlTransfer.idl  flights.cpp  genData.cpp  leaving_AD.csv  query.cpp  setpath.sh  statekey.idl  subscriber.cpp  tempSubscriber.txt
Assignment4/track_id_queryInstance/: CMakeLists.txt  ReadMe.md  track.idl  trackpublisher.cpp  tracksubscriber.cpp
